src/objects/PMF_Finca_Categoria_1__c.object
<CustomObject>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nivel_Sin_Orden__c</fullName>
        <formula>TRIM(RIGHT( Nivel_categor_a__c, 5))</formula>
        <label>Nivel Sin Orden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nivel_categor_a__c</fullName>
        <formula>IF( Puntaje_categor_a__c &lt; 2, &apos;c. Bajo&apos;, IF (Puntaje_categor_a__c &lt; 4, &apos;b. Medio&apos;, &apos;a. Alto&apos;))</formula>
        <label>Nivel categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_categoria__c</fullName>
        <formula>&apos;Registros&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_tipo_fecha__c</fullName>
        <formula>Nombre_categoria__c + &apos; &apos; +  TEXT(Tipo__c) + &apos; &apos; + TEXT(Fecha__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre tipo fecha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_de_Manejo_de_Finca__c</fullName>
        <label>Plan de Manejo de Finca</label>
        <referenceTo>Farm_Management_Plan__c</referenceTo>
        <relationshipLabel>PMF Finca Categoría 1 - Registro</relationshipLabel>
        <relationshipName>PMF_Finca_Categorias_1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Puntaje_Registro_aplicacion_de_pesticida__c</fullName>
        <formula>IF( AND(INCLUDES( Registro_aplicacion_de_pesticidas__c ,&apos;Fecha de aplicación&apos;),INCLUDES(Registro_aplicacion_de_pesticidas__c,&apos;Dosis&apos;),INCLUDES(Registro_aplicacion_de_pesticidas__c,&apos;Lote&apos;)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Registro aplicación de pesticida</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Registro_compra_de_insumos__c</fullName>
        <formula>IF(  CONTAINS(TEXT(Registro_compra_de_insumos__c) , &apos;Registro de insumos&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Registro compra de insumos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Registro_de_labores_Jornales__c</fullName>
        <formula>IF(ISPICKVAL( Registro_de_labores_Jornales__c , &apos;Si contrata y tiene registros&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Registro de labores (Jornales)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Registro_recolecci_n__c</fullName>
        <formula>IF( ISPICKVAL( Registro_recoleccion__c , &apos;Con documentación/registros de soporte&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Registro recolección</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Registro_ventas_Caf_Pergamino_S__c</fullName>
        <formula>IF( OR( ISPICKVAL(  Registro_ventas_CPS__c , &apos;Sí, con toda la información requerida&apos;), ISPICKVAL(  Registro_ventas_CPS__c , &apos;Sí, pero NO con toda la información&apos;)) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Registro ventas Café Pergamino S</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_categor_a__c</fullName>
        <formula>Puntaje_Registro_de_labores_Jornales__c +  Puntaje_Registro_aplicacion_de_pesticida__c +  Puntaje_Registro_compra_de_insumos__c +  Puntaje_Registro_ventas_Caf_Pergamino_S__c +  Puntaje_Registro_recolecci_n__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje categoría</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registro_aplicacion_de_pesticidas__c</fullName>
        <label>Registro aplicación de pesticidas</label>
        <picklist>
            <picklistValues>
                <fullName>Fecha de aplicación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No registra ningún dato</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Registro_compra_de_insumos__c</fullName>
        <label>Registro compra de insumos</label>
        <picklist>
            <picklistValues>
                <fullName>Registro de insumos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No registra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registro_de_labores_Jornales__c</fullName>
        <label>Registro de labores (Jornales)</label>
        <picklist>
            <picklistValues>
                <fullName>Si contrata y tiene registros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si contrata y no tiene registros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No contrata</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registro_recoleccion__c</fullName>
        <label>Registro recolección</label>
        <picklist>
            <picklistValues>
                <fullName>Con documentación/registros de soporte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No registra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registro_ventas_CPS__c</fullName>
        <label>Registro ventas Café Pergamino Seco (CPS</label>
        <picklist>
            <picklistValues>
                <fullName>Sí, con toda la información requerida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí, pero NO con toda la información</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cuenta con registro facturas/recibos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Línea base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PMF Finca Categoria 1 - Registro</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>PMF Finca Categoria 1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMF Finca Categorias 1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>